--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "react-components-practice-completed",
+  "name": "react-porsche-website",
   "version": "1.0.0",
-  "description": "",
+  "proxy": "http://localhost:5000",
+  "description": "A website that can be used by Porsche themselves. Project using React",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
@@ -11,7 +12,9 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.12",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-autocomplete": "^1.8.1",
     "react-dom": "^18.2.0",
     "react-grid": "^4.0.4",
@@ -20,7 +23,8 @@
     "react-multi-carousel": "^2.8.4",
     "react-player": "^2.15.1",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-social-media-embed": "^2.5.9"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
@@ -37,5 +41,7 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "author": "Shyexe",
+  "license": "ISC"
 }
