--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-porsche-website",
   "version": "1.0.0",
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5000/",
   "description": "A website that can be used by Porsche themselves. Project using React",
   "keywords": [],
   "main": "src/index.js",
