--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.15.12",
     "axios": "^1.6.8",
     "react": "^18.2.0",
+    "react-async-await": "^1.5.0",
     "react-audio-player": "^0.17.0",
     "react-autocomplete": "^1.8.1",
     "react-dom": "^18.2.0",
