--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.12",
     "axios": "^1.6.8",
-    "react": "^18.2.0",
+    "react": "^16.14.0",
     "react-async-await": "^1.5.0",
     "react-audio-player": "^0.17.0",
     "react-autocomplete": "^1.8.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^16.14.0",
     "react-grid": "^4.0.4",
     "react-grid-layout": "^1.4.4",
     "react-icons": "^5.0.1",
@@ -25,6 +25,7 @@
     "react-player": "^2.15.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
+    "react-scripts": "^5.0.1",
     "react-social-media-embed": "^2.5.9"
   },
   "devDependencies": {
